[gd_scene load_steps=2 format=2]

[ext_resource path="res://test.gd" type="Script" id=1]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 960.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
margin_right = 960.0
margin_bottom = 69.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15
bbcode_enabled = true
bbcode_text = "
[center][img=16]res://addons/gamejolt/icon.png[/img] Game Jolt API[/center]"
text = "
 Game Jolt API"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 73.0
margin_right = 960.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextEditResult" type="TextEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 318.0
margin_bottom = 467.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
text = "{}"
show_line_numbers = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 322.0
margin_right = 960.0
margin_bottom = 467.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 638.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Parameters"
align = 1
valign = 1

[node name="LineEditGameId" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 638.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
placeholder_text = "Game ID"

[node name="LineEditPrivateKey" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 638.0
margin_bottom = 152.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
secret = true
placeholder_text = "Private Key"

[node name="LineEditUserName" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 156.0
margin_right = 638.0
margin_bottom = 205.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
placeholder_text = "User Name"

[node name="LineEditUserToken" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 209.0
margin_right = 638.0
margin_bottom = 257.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
secret = true
placeholder_text = "User Name"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 261.0
margin_right = 638.0
margin_bottom = 309.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Time"
align = 1
valign = 1

[node name="ButtonTime" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 313.0
margin_right = 638.0
margin_bottom = 362.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "time()"

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 366.0
margin_right = 638.0
margin_bottom = 414.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Friends"
align = 1
valign = 1

[node name="ButtonFriends" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 418.0
margin_right = 638.0
margin_bottom = 467.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "friends()"

[connection signal="text_changed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/LineEditGameId" to="." method="_on_LineEditGameId_text_changed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/LineEditPrivateKey" to="." method="_on_LineEditPrivateKey_text_changed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/LineEditUserName" to="." method="_on_LineEditUserName_text_changed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/LineEditUserToken" to="." method="_on_LineEditUserToken_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ButtonTime" to="." method="_on_ButtonTime_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ButtonFriends" to="." method="_on_ButtonFriends_pressed"]
